# CloudCompare

plugins/: CMakeLists.txt
plugins/core/Standard/: CMakeLists.txt
plugins/myplugin/: CMakeLists.txt
plugins/myplugin/SegmentationPlugin/: CMakeLists.txt  SegmentationPlugin.qrc  info.json
plugins/myplugin/SegmentationPlugin/include/: ActionA.h
plugins/myplugin/SegmentationPlugin/src/: ActionA.cpp  ExamplePlugin.cpp
